--- a/app/design/frontend/base/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/address/edit.phtml
@@ -28,42 +28,7 @@
     <input type="hidden" name="success_url" value="<?= $this->getSuccessUrl() ?>" />
     <input type="hidden" name="error_url" value="<?= $this->getErrorUrl() ?>" />
 
-<?php $_groups = $this->getGroupedFields() ?>
-<?php foreach (array_keys($_groups) as $_i => $_group): ?>
-    <div class="fieldset">
-        <h2 class="legend"><?= $this->__($_group) ?></h2>
-    <?php if ($_i === 0): ?>
-        <p class="required"><?= $this->__('* Required Fields') ?></p>
-    <?php endif ?>
-        <ul class="form-list">
-    <?php foreach ($_groups[$_group] as $_code => $_attribute): ?>
-        <?php if ($_code === 'region'): continue ?>
-        <?php elseif ($_code === 'region_id'): ?>
-            <li class="wide">
-                <div class="field">
-                    <label for="region_id" class="required"><em>*</em><?= $this->__('State/Province') ?></label>
-                    <div class="input-box">
-                        <select id="region_id" name="region_id" title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="validate-select" style="display:none;">
-                           <option value=""><?= $this->__('Please select region, state or province') ?></option>
-                        </select>
-                        <script type="text/javascript">
-                            $('region_id').setAttribute('defaultValue',  "<?= $this->getAddress()->getRegionId() ?>");
-                        </script>
-                        <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getAddress()->getRegion()) ?>"  title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('region') ?>" />
-                    </div>
-                </div>
-            </li>
-        <?php else: ?>
-            <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
-            <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
-            <?php if ($_element->isEnabled()): ?>
-                <li class="wide"><?= $_element->setObject($this->getAddress())->toHtml() ?></li>
-            <?php endif ?>
-        <?php endif ?>
-    <?php endforeach ?>
-        </ul>
-    </div>
-<?php endforeach ?>
+    <?= $this->getChildHtml('form_customer_address_edit') ?>
 
     <div class="fieldset">
         <ul class="form-list">
@@ -89,10 +54,11 @@
     </div>
     <div class="buttons-set">
         <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>" class="button"><span><span><?= $this->__('Save Address') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>" class="button"><?= $this->__('Save Address') ?></button>
     </div>
 </form>
 <script type="text/javascript">
-    var dataForm = new VarienForm('form-validate', true);
-    new RegionUpdater('country_id', 'region', 'region_id', <?= Mage::helper('directory')->getRegionJsonByStore() ?>, undefined, 'postcode');
+    const countryRegions = <?= Mage::helper('directory')->getRegionJsonByStore() ?>;
+    const dataForm = new VarienForm('form-validate', true);
+    new RegionUpdater('country', 'region', 'region_id', countryRegions, undefined, 'zip');
 </script>
