Fix Varien.DateElement call, however value isn't saving, will investigate later

--- a/app/design/frontend/base/default/template/eav/widget/form/element/date.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form/element/date.phtml
@@ -47,6 +47,6 @@
             full: el.querySelector('.date-full input'),
             advice: el.querySelector('.validation-advice')
         };
-        new Varien.DateElementHelper('container', container, <?= $this->isRequired() ? 'true' : 'false' ?>, '<?= $this->getDateFormat() ?>');
+        new Varien.DateElement('container', container, <?= $this->isRequired() ? 'true' : 'false' ?>, '<?= $this->getDateFormat() ?>');
     })();
 </script>
