--- a/app/design/frontend/base/default/template/eav/widget/form/element/region.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form/element/region.phtml
@@ -11,7 +11,7 @@
 ?>
 <label for="<?= $this->getFieldId()?>_id" class="<?= $this->getLabelClass() ?>"><em>*</em><?= $this->getLabel() ?></label>
 <div class="input-box">
-    <select id="<?= $this->getFieldId() ?>_id" name="<?= $this->getFieldName() ?>_id" title="<?= $this->quoteEscape($this->getLabel()) ?>"<?= $this->isRequired() ? ' class="validate-select"' : '' ?> <?= $this->getFieldParams() ?> defaultvalue="<?= $this->escapeHtml($this->getValue()) ?>" style="display:none;">
+    <select id="<?= $this->getFieldId() ?>_id" name="<?= $this->getFieldName() ?>_id" title="<?= $this->quoteEscape($this->getLabel()) ?>"<?= $this->isRequired() ? ' class="validate-select"' : '' ?> <?= $this->getFieldParams() ?> data-default-value="<?= $this->escapeHtml($this->getRegionId()) ?>" style="display:none;">
        <option value=""><?= $this->__('Please select region, state or province') ?></option>
     </select>
     <input type="text" id="<?= $this->getFieldId() ?>" name="<?= $this->getFieldName() ?>" value="<?= $this->escapeHtml($this->getValue()) ?>" title="<?= $this->quoteEscape($this->getLabel()) ?>" class="input-text <?= $this->getClass() ?>" <?= $this->getFieldParams() ?> />
