--- a/app/design/adminhtml/default/default/template/catalog/product/edit.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit.phtml
@@ -13,11 +13,10 @@
 <?php
 /**
  * Template for Mage_Adminhtml_Block_Catalog_Product_Edit
+ *
+ * @var Mage_Adminhtml_Block_Catalog_Product_Edit $this
  */
 ?>
-
-
-
 <div class="content-header">
     <h3><?= $this->getHeader() ?></h3>
     <p class="content-buttons form-buttons"><?= $this->getBackButtonHtml() ?>
