--- a/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/select.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/select.phtml
@@ -9,8 +9,9 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
 
+/** @var Mage_Adminhtml_Block_Catalog_Product_Edit_Tab_Options_Type_Select $this */
+?>
 <script type="text/javascript">
 //<![CDATA[
 OptionTemplateSelect = '<table class="border" cellpadding="0" cellspacing="0">'+
