--- a/app/design/frontend/rwd/default/template/sales/widget/guest/form.phtml
+++ b/app/design/frontend/rwd/default/template/sales/widget/guest/form.phtml
@@ -63,29 +63,26 @@
             </div>
         </div>
     </div>
-<script type="text/javascript">
-//<![CDATA[
-    if ($('quick_search_type_id').value == 'zip') {
-        $('oar-zip').show();
-        $('oar-email').hide();
-    } else {
-       $('oar-zip').hide();
-       $('oar-email').show();
-    }
+    <script type="text/javascript">
+        if (document.getElementById('quick_search_type_id').value === 'zip') {
+            document.getElementById('oar-zip').style.display = 'block';
+            document.getElementById('oar-email').style.display = 'none';
+        } else {
+            document.getElementById('oar-zip').style.display = 'none';
+            document.getElementById('oar-email').style.display = 'block';
+        }
 
-   var dataForm = new VarienForm('oar_widget_orders_and_returns_form', true);
+        const dataForm = new VarienForm('oar_widget_orders_and_returns_form', true);
 
-   function showIdentifyBlock(id)
-   {
-       if (id == 'zip') {
-           $('oar-zip').show();
-           $('oar-email').hide();
-       } else if (id == 'email') {
-           $('oar-zip').hide();
-           $('oar-email').show();
-       }
-       return false;
-   }
-//]]>
-</script>
+        function showIdentifyBlock(id) {
+            if (id === 'zip') {
+                document.getElementById('oar-zip').style.display = 'block';
+                document.getElementById('oar-email').style.display = 'none';
+            } else if (id == 'email') {
+                document.getElementById('oar-zip').style.display = 'none';
+                document.getElementById('oar-email').style.display = 'block';
+            }
+            return false;
+        }
+    </script>
 <?php endif ?>
