--- a/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
+++ b/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
@@ -48,19 +48,21 @@
     <input type="hidden" id="pp_checkout_url" name="return_url" value="" />
 <?php endif ?>
 <script type="text/javascript">
-//<![CDATA[
-    $$('#<?= $shortcutHtmlId ?>','#<?= $bmlShortcutHtmlId ?>').invoke('observe', 'click', function(event) {
-        <?php if ($this->getConfirmationUrl()): ?>
+    ['<?= $shortcutHtmlId ?>', '<?= $bmlShortcutHtmlId ?>'].forEach(id => {
+        document.getElementById(id).addEventListener('click', function(event) {
+            <?php if ($this->getConfirmationUrl()): ?>
             if (confirm('<?= Mage::helper('core')->jsQuoteEscape($this->getConfirmationMessage()) ?>')) {
                 this.href = '<?= $this->getConfirmationUrl() ?>';
             }
-        <?php endif ?>
-        <?php if ($this->getIsInCatalogProduct()): ?>
-            $('pp_checkout_url').value = this.href;
+            <?php endif ?>
+
+            <?php if ($this->getIsInCatalogProduct()): ?>
+            document.getElementById('pp_checkout_url').value = this.href;
             productAddToCartForm.submit(this);
-            event.stop();
-        <?php endif ?>
+            event.preventDefault();
+            event.stopPropagation();
+            <?php endif ?>
+        });
     });
-//]]>
 </script>
 <?php endif ?>
