--- a/app/design/frontend/base/default/template/catalog/product/compare/list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/compare/list.phtml
@@ -163,20 +163,32 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
         </span>
     </div>
     <script type="text/javascript">
-        /**
-         * Send remove item request, after that reload windows
-         */
-        function removeItem(url)
-        {
-            new Ajax.Request(url, {
-                parameters: {isAjax: 1, method: 'POST'},
-                onLoading: function(){$('compare-list-please-wait').show();},
-                onSuccess: function(transport) {
-                    $('compare-list-please-wait').hide();
+        function removeItem(url) {
+            document.getElementById('compare-list-please-wait').style.display = 'block';
+
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: 'isAjax=1'
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response;
+                })
+                .then(() => {
+                    document.getElementById('compare-list-please-wait').style.display = 'none';
                     window.location.reload();
-                    window.opener.location.reload();
-                }
-            });
+                    if (window.opener) {
+                        window.opener.location.reload();
+                    }
+                })
+                .catch(error => {
+                    document.getElementById('compare-list-please-wait').style.display = 'none';
+                });
         }
     </script>
 <?php else: ?>
