--- a/public/skin/frontend/rwd/default/css/madisonisland.css
+++ b/public/skin/frontend/rwd/default/css/madisonisland.css
@@ -32,23 +32,23 @@ body.cms-home .main-container {
 
 .slideshow .banner-msg h2 {
   color: #FFFFFF;
-  font-size: 24px;
+  font-size: 1.5rem;
   text-shadow: 1px 1px 3px #555555;
 }
 
 .slideshow .banner-msg h2 strong {
   font-weight: bold;
   display: block;
-  font-size: 36px;
+  font-size: 2.25rem;
 }
 
 @media only screen and (max-width: 770px) {
   .slideshow .banner-msg h2 {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .slideshow .banner-msg h2 strong {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 @media only screen and (max-width: 479px) {
@@ -57,11 +57,11 @@ body.cms-home .main-container {
   }
 
   .slideshow .banner-msg h2 {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .slideshow .banner-msg h2 strong {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 /* -------------------------------------------- *
@@ -115,23 +115,23 @@ body .promos > li {
   width: 100%;
   top: 10%;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-shadow: 1px 1px 3px #555555;
 }
 
 .promos strong {
   font-weight: 600;
-  font-size: 26px;
+  font-size: 1.625rem;
   display: block;
 }
 
 @media only screen and (min-width: 771px) {
   .promos span {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .promos strong {
-    font-size: 17px;
+    font-size: 1.063rem;
   }
 
   /* Config: Three columns + flexible gutter */
@@ -147,11 +147,11 @@ body .promos > li {
 }
 @media only screen and (min-width: 880px) {
   .promos span {
-    font-size: 18px;
+    font-size: 1.125rem;
   }
 
   .promos strong {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 /* -------------------------------------------- *
@@ -240,7 +240,7 @@ body .promos > li {
   color: #FFFFFF;
   position: absolute;
   background-color: #7B7C7B;
-  font-size: 17px;
+  font-size: 1.063rem;
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
@@ -268,7 +268,7 @@ body .promos > li {
   margin: 0;
   position: absolute;
   color: #000000;
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: 500;
   line-height: 36px;
   text-align: center;
@@ -276,7 +276,7 @@ body .promos > li {
 
 .catalog-category-view div.categoryland-caption span.blue-big-text {
   color: #0472ad;
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: 800;
   padding: 0 0 0 8px;
 }
@@ -296,7 +296,7 @@ body .promos > li {
 .catalog-category-view div.categoryland-caption p.desc {
   color: #656565;
   font-style: italic;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 28px;
 }
 
@@ -309,7 +309,7 @@ body .promos > li {
 .cms-home #homepage-main-slides div.slides_control div div.slideshow-caption span.blue-big-text,
 .catalog-category-view div.categoryland-caption span.blue-big-text {
   color: #0472ad;
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: 800;
   padding: 0 0 0 8px;
 }
